my profile description

--- a/index.html
+++ b/index.html
@@ -18,47 +18,72 @@
   <body>
     <div class="container">
       <div class="card-white" id="introduction">
-        <h1>Hello, I'm Boris 😎</h1>
+        <h1>Hello, I’m Bineta Saidou</h1>
+
         <img
-          src="images/profile.png"
+          src="images/profile.jpg"
           class="img-circle"
           width="100px"
           alt="Boris Paillard"
         />
+
         <p>
-          I love Github, UX/UI Design, web-development and motorbikes 🏍️. I
-          launched Le Wagon to teach code to entrepreneurs and creative people
-          around the world 🌍.
+          I’m a <strong> young Senegalese woman</strong>, passionate about
+          cooking, I adore cooking, guests entertaining, but all I like is
+          finance, I like everything related to finance; banks, insurance, etc.
         </p>
-        <a href="#" class="btn-blue">Discover Le Wagon</a>
+
+        <a
+          href="https://binetasaidou.github.io/my-startup/"
+          target="_blank"
+          class="btn-blue"
+          >Discover my startup</a
+        >
       </div>
+
       <div class="card-white">
-        <h2>UX/UI Design 📐</h2>
-        <p>I am passionate about <strong>UX/UI Design</strong>.</p>
+        <h2>What about me 👩‍💼</h2>
+        <p>
+          My name is <strong> Bineta Saidou Sarr</strong> , I am from
+          <strong> Senegal</strong> I am "al pular". I have visited many
+          countries like Dubai, Tunisia, Gabon and others; I speak French Wolof
+          pular and English but just a little bit.
+        </p>
       </div>
+
       <div class="card-white">
-        <h2>Frontend Development 💻</h2>
-        <p>I am passionate about <strong>Frontend Development</strong>.</p>
+        <h2>My hobbies ⭐️</h2>
+        <p>
+          Everybody knows that I like eating 🍔, cooking, discovering too, and
+          creating new dishes. I am a great culinary dreamer, I love when a
+          kitchen is tidy and above all well-equipped.
+        </p>
       </div>
+
       <div class="card-white">
-        <h2>Motorbikes 🏍️</h2>
-        <p>I am passionate about <strong>Motorbikes</strong>.</p>
+        <h2>My career plan 📐</h2>
+        <p>
+          My first dream is to have my own business in finance and be the chief,
+          so as an African woman I want to create my own bank. I want to be an
+          example for all women in the world.
+        </p>
       </div>
+
       <div class="card-white">
-        <h2>Follow me</h2>
+        <h2>Follow me 👩🏽‍💻</h2>
         <ul class="list-inline">
           <li>
-            <a href="https://github.com/papillard" target="_blank">
+            <a href="https://github.com" target="_blank">
               <i class="fab fa-github-square"></i>
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/bpapillard" target="_blank">
+            <a href="https://twitter.com" target="_blank">
               <i class="fab fa-twitter-square"></i>
             </a>
           </li>
           <li>
-            <a href="https://medium.com/@papillard" target="_blank">
+            <a href="https://medium.com" target="_blank">
               <i class="fab fa-medium"></i>
             </a>
           </li>
