--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </p>
 
         <a
-          href="https://binetasaidou.github.io/my-startup/"
+          href="https://binetasaidou.github.io/the-kitchen/"
           target="_blank"
           class="btn-blue"
           >Discover my startup</a
